# PA-MachineLearning-3ESGI

./: .gitignore  README.md
Project/App/Client/: Readme.txt
Project/App/Client/web-machine-learning/: README.md  package.json
Project/App/Client/web-machine-learning/src/: App.vue
Project/App/Server/train_model/: README.md  Train_tenserflow_2.py  mlp_420.json  train_dataset_lineare_model.py  train_dataset_mlp.py
Project/App/Server/train_model/model_train/: lineare_model_341_343_bas_chaussure.json  lineare_model_407_416_bas_haut.json  lineare_model_415_421_chaussure_haut.json  mlp266_270.json  mlp_2CoucheDe10_533_589.json  mlp_3CoucheDe20_523_589.json
Project/App/Server/train_model/test/: saved_model.pb
Project/App/Server/web_server/: Cargo.toml
Project/App/Server/web_server_django/: lineare_model.json  manage.py  mlp.json  model_tenserflow.json  train_mlp_model.py
Project/App/Server/web_server_django/ml_api/: urls.py  views.py
Project/App/Server/web_server_django/model_pre_train/: mlp230_270.json  mlp266_270.json  mlp_193_270.json  mlp_379.json
Project/Docs/Rapport/: Rapport_3IABD.ipynb  lineare_model.json  mlp.json  model.h5
Project/Docs/Rapport/.ipynb_checkpoints/: Rapport_3IABD-checkpoint.ipynb
Project/Docs/Slides/: PPT_PA.pptx
Project/Lib/MachineLearning/: Cargo.toml
Project/Lib/MachineLearning/src/: main.rs  model.rs
Project/Lib/MachineLearning/src/model/: linear_model.rs  mlp.rs  mlp2.rs  svm.rs  svn.rs
Project/Tests/: test-machine_learning.ipynb
Project/Tests/.ipynb_checkpoints/: test-machine_learning-checkpoint.ipynb
(+23 files in other folders)
